fix button alignment

--- a/style.css
+++ b/style.css
@@ -99,7 +99,6 @@ hr {
         & td:last-child {
             width: 2.5rem;
             padding-left: 2%;
-            align-content: end;
         }
     }
 }
